--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "pokebox",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://chronolai.github.io/pokebox",
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
